[package]
authors = ["The Rust Project Developers"]
name = "alloc"
version = "0.0.0"

[lib]
name = "alloc"
path = "lib.rs"

[dependencies]
core = { path = "../libcore" }
libc = { path = "../liblibc" }

# FIXME(stage0): remove this after a snapshot
alloc_system = { path = "../liballoc_system" }

[dev-dependencies]
std = { path = "../libstd" }
log = { path = "../liblog" }
test = { path = "../libtest" }
