[package]
authors = ["The Rust Project Developers"]
name = "rustc"
version = "0.0.0"

[lib]
name = "rustc"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
arena = { path = "../libarena" }
flate = { path = "../libflate" }
fmt_macros = { path = "../libfmt_macros" }
getopts = { path = "../libgetopts" }
graphviz = { path = "../libgraphviz" }
log = { path = "../liblog" }
rbml = { path = "../librbml" }
rustc_back = { path = "../librustc_back" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_llvm = { path = "../librustc_llvm" }
tir = { path = "../librustc_tir" }
serialize = { path = "../libserialize" }
syntax = { path = "../libsyntax" }

[dev-dependencies]
test = { path = "../libtest" }
