[package]
authors = ["The Rust Project Developers"]
name = "rustc_back"
version = "0.0.0"

[lib]
name = "rustc_back"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
syntax = { path = "../libsyntax" }
serialize = { path = "../libserialize" }
rustc_llvm = { path = "../librustc_llvm" }
log = { path = "../liblog" }

[dev-dependencies]
test = { path = "../libtest" }

[features]
jemalloc = []
