[package]
authors = ["The Rust Project Developers"]
name = "rustc_driver"
version = "0.0.0"

[lib]
name = "rustc_driver"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
arena = { path = "../libarena" }
flate = { path = "../libflate" }
getopts = { path = "../libgetopts" }
graphviz = { path = "../libgraphviz" }
log = { path = "../liblog" }
rustc = { path = "../librustc" }
rustc_back = { path = "../librustc_back" }
rustc_borrowck = { path = "../librustc_borrowck" }
rustc_lint = { path = "../librustc_lint" }
rustc_llvm = { path = "../librustc_llvm" }
rustc_privacy = { path = "../librustc_privacy" }
rustc_resolve = { path = "../librustc_resolve" }
tir = { path = "../librustc_tir" }
rustc_trans = { path = "../librustc_trans" }
rustc_typeck = { path = "../librustc_typeck" }
serialize = { path = "../libserialize" }
syntax = { path = "../libsyntax" }

[dev-dependencies]
test = { path = "../libtest" }
