[package]
authors = ["The Rust Project Developers"]
name = "rustc_llvm"
version = "0.0.0"
build = "build.rs"
links = "llvm"

[lib]
name = "rustc_llvm"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[features]
static-libstdcpp = []
cargo = []
default = ["cargo"]

[build-dependencies]
build_helper = { path = "../build_helper" }
gcc = "0.3"
