[package]
authors = ["The Rust Project Developers"]
name = "rustc_trans"
version = "0.0.0"

[lib]
name = "rustc_trans"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
arena = { path = "../libarena" }
flate = { path = "../libflate" }
getopts = { path = "../libgetopts" }
graphviz = { path = "../libgraphviz" }
log = { path = "../liblog" }
rustc = { path = "../librustc" }
rustc_back = { path = "../librustc_back" }
rustc_llvm = { path = "../librustc_llvm" }
serialize = { path = "../libserialize" }
syntax = { path = "../libsyntax" }
rustc_platform_intrinsics = { path = "../librustc_platform_intrinsics" }
