[package]
authors = ["The Rust Project Developers"]
name = "syntax"
version = "0.0.0"

[lib]
name = "syntax"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
arena = { path = "../libarena" }
fmt_macros = { path = "../libfmt_macros" }
serialize = { path = "../libserialize" }
term = { path = "../libterm" }
log = { path = "../liblog" }

[dev-dependencies]
test = { path = "../libtest" }
